﻿[B][COLOR=FF56ADDA]v4.1.7a[/COLOR][/B]
As usual.... bug fixing right after pushing the update
• Fixed: Missing plots, empty info label conditions.... etc

[B][COLOR=FF56ADDA]v4.1.7[/COLOR][/B]
Bugs incoming ^^
• Added: ClassicSlide view for music/videos/addons/programs
• Added: Recently added skin engine changes of Isengard

[B][COLOR=FF56ADDA]v4.1.6[/COLOR][/B]
• Removed: CinemaExperience from the addon requirements. Still supported but not required to run the skin.
• Fixed: TVTunes playback notification on Home
• Fixed: Wrong InLibrary texture for focused item on ExtendedInfo video list
• Fixed: KodiIntro/StartupPlaylist settings issue
• Changed: KodiIntro startup behaviour
• Added: Loading label for slow machines
• Removed: Lyrics support for audio internet streams. Too annoying O_o
• Merged: Lithuanian translations

[B][COLOR=FF56ADDA]v4.1.5a[/COLOR][/B]
As usual..... found an issue right after pushing the update
• Fixed: MainMenu unfocus animation

[B][COLOR=FF56ADDA]v4.1.5[/COLOR][/B]
• Added: Switch to toggle between Unwatched/Watched/Hidden watched flag indicator 
• Added: Library statistic labels in the home menu (can be disabled)
• Replaced: InLibrary overlay icon
• Fixed: More AmbilightMode things
• Fixed: ThumbNail view episode flag for focused item
• Fixed: NetFilx landscape fanart conditions. Nobody noticed these bugs lol.
• Added: NetFilx - Season info label on the thumbnail

[B][COLOR=FF56ADDA]v4.1.4b[/COLOR][/B]
Not my day....
• Fixed: More vignette issues
• Fixed: Not working Playlist button on MusicOSD
• Added: ThumbList view to playlists

[B][COLOR=FF56ADDA]v4.1.4a[/COLOR][/B]
Quick update release to fix the non working visualisation settings dialog
• Fixed: Not working visualisation settings window
• Fixed: Fixed "doubled" vignette if the music player shows the info panel
• Added: Music visualisation settings to the skin settings

[B][COLOR=FF56ADDA]v4.1.4[/COLOR][/B]
• Fixed: Image fadetime issues with latest nightlie of Kodi